second  init of zandu UserBundle

--- a/Resources/config/params/parameters.yml
+++ b/Resources/config/params/parameters.yml
@@ -1,5 +1,5 @@
 parameters:
-    znd_usm_user.profile.entity:         "ZND\USM\\UserBundle\\Entity\\Profile"
-    znd_usm_user.group.entity:           "ZND\USM\\UserBundle\\Entity\\UserGroup"
-    znd_usm_user.options.entity:         "ZND\USM\\UserBundle\\Entity\\UserOptions"
-    znd_usm_user.following.entity:       "ZND\USM\\UserBundle\\Entity\\Following"
+    znd_user.profile.entity:         "ZND\USM\\UserBundle\\Entity\\Profile"
+    znd_user.group.entity:           "ZND\USM\\UserBundle\\Entity\\UserGroup"
+    znd_user.options.entity:         "ZND\USM\\UserBundle\\Entity\\UserOptions"
+    znd_user.following.entity:       "ZND\USM\\UserBundle\\Entity\\Following"
